# robot3

./: .gitignore  pointTo.py  queue_test.cpp  shakeHand.py  upper_limb_r copy.cpp
catkin_ws/src/my_ros_package/: CMakeLists.txt  package.xml
catkin_ws/src/my_ros_package/src/: publisher_node.cpp  publisher_node_test.cpp  subscriber_node.cpp
catkin_ws/src/upper_limb/: CMakeLists.txt  package.xml
catkin_ws/src/upper_limb/src/: ethercat_interface_l.cpp  ethercat_interface_l.h  ethercat_interface_r.cpp  ethercat_interface_r.h  joint_data.cpp  joint_data.h  upper_limb.cpp  upper_limb2.cpp  upper_limb_all.cpp  upper_limb_csv.cpp  upper_limb_l.cpp  upper_limb_r.cpp  upper_limb_sim.cpp  upper_limb_sim_csv.cpp
catkin_ws/src/upper_limb/src/python_csv/: pointTo.py  points.txt  salute.py  shakeHand.py  waveHand.py
dc_user/: CMakeLists.txt  main.c
project0111/: CMakeLists.txt  ecat_data_buffer.c  ecat_data_buffer.h  rt_ethercat.hpp  test_subscriber.cpp
